# marker_trait-rs

./: Cargo.toml  README.md
.github/actions/init-toolchain/: action.yml
.github/actions/prep-release/: action.yml
.github/actions/release/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
macro/: Cargo.toml  README.md
macro/src/: lib.rs
src/: lib.rs
