[package]
name = "marker_trait"
version = "1.0.0"
edition = "2021"
publish = false
rust-version = "1.60.0"
authors = [
  "Art <amolc@pm.me>",
]
license = "Apache-2.0"
readme = "README.md"
description = "Implement a blanket implementation for a marker trait."
repository = "https://github.com/Alorel/marker_trait-rs"
keywords = []
categories = []
include = [
  "src/",
  "Cargo.toml",
]

[workspace]
members = ["macro"]

[dependencies]
marker_trait_macro = { version = "1", path = "macro" }

[dev-dependencies]
static_assertions = "1.1.0"
