[package]
name = "marker_trait"
version = "2.0.0"
edition = "2021"
rust-version = "1.60.0"
authors = [
  "Art <amolc@pm.me>",
]
license = "Apache-2.0"
readme = "README.md"
description = "Implement a blanket implementation for a marker trait."
repository = "https://github.com/Alorel/marker_trait-rs"
keywords = ["marker", "trait", "blanket", "implementation", "macro"]
categories = ["development-tools", "rust-patterns"]
include = [
  "src/",
  "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = {version = "2", features = ["full"]}
quote = "1"

[dev-dependencies]
static_assertions = "1.1"
