[package]
name = "marker_trait_macro"
version = "1.0.0"
edition = "2021"
publish = false
rust-version="1.60.0"
authors = [
  "Art <amolc@pm.me>",
]
license = "Apache-2.0"
readme = "README.md"
description = "Macro for the `marker_trait` crate"
repository = "https://github.com/Alorel/marker_trait-rs"
include = [
  "src/",
  "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
macroific = {version = "1.1.1", features = ["attr_parse"]}
proc-macro2 = "1"
syn = {version = "2", features = ["full"]}
quote = "1"
